Edge Slide can not be setted #46451

Closed
opened 2015-10-12 13:01:14 +02:00 by Cenek Strichel · 10 comments

System Information
W10 64b

Blender Version
2.76

Short description of error
You can not set Edge slide (Even) after creating edge in popup dialog (F6)

Exact steps for others to reproduce the error

  1. use Loop Cut and Slide
  2. F6 ... toggle setting is missing

edge slide.png

**System Information** W10 64b **Blender Version** 2.76 **Short description of error** You can not set Edge slide (Even) after creating edge in popup dialog (F6) **Exact steps for others to reproduce the error** 1) use Loop Cut and Slide 2) F6 ... toggle setting is missing ![edge slide.png](https://archive.blender.org/developer/F244430/edge_slide.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @brecht

Added subscriber: @brecht

There are two operators here, Loop Cut and Edge Slide. There's nothing missing, this is just the title. Some extra space between the two operators would make this clear.

There are two operators here, Loop Cut and Edge Slide. There's nothing missing, this is just the title. Some extra space between the two operators would make this clear.
Author

I understand. But how can I change Even settings? I can switch it during creating of edge, but it is missing in Popup dialog

I understand. But how can I change Even settings? I can switch it during creating of edge, but it is missing in Popup dialog

This issue was referenced by ee688e24a7

This issue was referenced by ee688e24a766d1352d9eac5b22113b118c227ceb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Ah sorry, I missed that. Fixed now.

Ah sorry, I missed that. Fixed now.
Author

There is also Clamp attribute ;)

There is also Clamp attribute ;)

This issue was referenced by 4965c43df7

This issue was referenced by 4965c43df7482f1426bb030f7b766921a25e37c0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46451
No description provided.