Fix T46451: edge slide even and flipped not available in redo popup.